--- a/_posts/2024-01-12-rCore_ch3.md
+++ b/_posts/2024-01-12-rCore_ch3.md
@@ -6,6 +6,12 @@ tags:
   - rCore
   - OS
 ---
+<style>
+/* Adjust code block font size */
+.highlight {
+  font-size: 20px; /* 您可以根据需要调整字体大小 */
+}
+</style>
 
 # CH3 Homework
 
