--- a/_posts/2024-01-12-rCore_ch3.md
+++ b/_posts/2024-01-12-rCore_ch3.md
@@ -66,9 +66,9 @@ pub struct TaskControlBlock {
 ```
 
 ```rust
-   另外在lazy_static中需要对syscall_times以及start_time进行初始化
+   //另外在lazy_static中需要对syscall_times以及start_time进行初始化
 ...
-		///当前任务的TCB
+    ///当前任务的TCB
     fn get_current_task(&self)->TaskControlBlock{
         let inner=self.inner.exclusive_access();
         let current=inner.current_task;
