ch4-sys_get_time

--- a/_posts/2024-01-12-rCore_ch3.md
+++ b/_posts/2024-01-12-rCore_ch3.md
@@ -2,6 +2,7 @@
 title: 'rCore-ch3'
 date: 2024/1/12
 permalink: /posts/2024/01/rCore_ch3/
+excerpt: 'rCore 多道程序与分时多应用 '
 tags:
   - rCore
   - OS
@@ -13,8 +14,8 @@ tags:
 }
 </style>
 
-# CH3 Homework
-
+# 第三章 多道程序与分时多应用
+## 编程作业
 ### 获取任务信息
 
 ch3 中，我们的系统已经能够支持多个任务分时轮流运行，我们希望引入一个新的系统调用 `sys_task_info` 以获取当前任务的信息，定义如下：
