ch4-sys_get_time

--- a/_posts/2024-01-13-rCore_ch4.md
+++ b/_posts/2024-01-13-rCore_ch4.md
@@ -162,15 +162,71 @@ impl PageTable {
 
 之后，当遇到需要查一个特定页表（非当前正处在的地址空间的页表时），便可先通过 `PageTable::from_token` 新建一个页表，再调用它的 `translate` 方法查页表。  
 
+## 内核访问物理页帧
+为了让内核能访问实际的物理地址， rCore 设计了三种粒度的访问方式： 基于 PTE， 基于 Bytes， 基于变量类型。 至此， 物理地址空间的分配以及访问的框架已经建成， 后续需要做的就是构建虚拟地址与物理地址映射的 页表(Page Table)。
+```rust
+// os/src/mm/address.rs
+  
+impl PhysPageNum {
+    pub fn get_pte_array(&self) -> &'static mut [PageTableEntry];
+    pub fn get_bytes_array(&self) -> &'static mut [u8];
+    pub fn get_mut<T>(&self) -> &'static mut T;
+}
+```
 ## 改进SYSCALL
 本章更改了 `sys_write` 系统调用， 通过 `ranslated_byte_buffer` 在内核空间中开辟了一个可以访问应用数据的区域（实际上是将应用数据从用户态虚拟地址空间拷贝到了内核态虚拟地址空间以供内核访问）。 相应的， 前述章节需要访问应用态数据的系统调用均需要通过这种间接的方式进行数据的访问与更改。 这也就是 `sys_get_time` 以及 `sys_task_info` 在第四章失效的原因。
 
 ## 编程作业
 <h3>1.重写 sys_get_time 和 sys_task_info  </h3>
 
-引入虚存机制后，原来内核的 sys_get_time 和 sys_task_info 函数实现就无效了。请你重写这个函数，恢复其正常功能。
+引入虚存机制后，原来内核的 sys_get_time 和 sys_task_info 函数实现就无效了。请你重写这个函数，恢复其正常功能。  
 
-<h3>mmap 和 munmap 匿名映射</h3>
+```rust
+// os/src/syscall/process.rs
+
+/// YOUR JOB: get time with second and microsecond
+/// HINT: You might reimplement it with virtual memory management.
+/// HINT: What if [`TimeVal`] is splitted by two pages ?
+pub fn sys_get_time(ts: *mut TimeVal, _tz: usize) -> isize {
+    trace!("kernel: sys_get_time");
+    let us=get_time_us();
+    let p_ts=translated_mut_ptr(current_user_token(), ts);
+    *p_ts = TimeVal {
+        sec: us / 1_000_000,
+        usec: us % 1_000_000,
+    };
+    0
+}
+
+current_user_token()的定义如下：
+/// Get the current 'Running' task's token.
+//pub fn current_user_token() -> usize {
+//    TASK_MANAGER.get_current_token()
+//}
+```
+这里首先要使用`current_user_token()`获取当前正在运行的任务的`token`,用这个token来查页表,`tranlated_mut_ptr()`获得在物理页帧中的类型为`TimeVal`的可变引用，然后对这个`TimeVal`进行修改。  
+思路：`token->手动查页表->PTE->PhysPageNum->PhysAddr-> get_mut()访问物理地址`
+```rust
+//os/src/mm/page_table.rs
+
+/// ch4:从虚拟地址转换为物理地址
+pub fn virt_to_pyhs(token: usize,va: VirtAddr) -> PhysAddr{   
+    let pagetable = PageTable::from_token(token);//从token查页表
+    let vpn = va.floor();  //获取虚拟地址所处的虚拟页的页号
+    //页表+虚拟页号->三级页表项(指向物理页的页表项)->物理页号->物理地址的前半部分
+    let mut pa: PhysAddr = pagetable.translate(vpn).unwrap().ppn().into(); 
+    pa.0 += va.page_offset();  //前半部分与页内偏移组合为完整物理地址
+    pa  
+}
+
+/// ch4: return a physical pointer in memory set of the pagetable token 
+pub fn translated_mut_ptr<T>(token: usize, ptr: *mut T) -> &'static mut T{
+    let ptr_va = VirtAddr::from(ptr as usize);
+    let ptr_pa = virt_to_pyhs(token, ptr_va);
+    ptr_pa.get_mut()  //rCore的三种粒度访问物理页帧的方式之三:基于变量类型
+}
+```
+<h3>2.mmap 和 munmap 匿名映射</h3>
 
 mmap 在 Linux 中主要用于在内存中映射文件， 本次实验简化它的功能，仅用于申请内存。
 
