ch4-sys_get_time

--- a/_posts/2024-01-13-rCore_ch4.md
+++ b/_posts/2024-01-13-rCore_ch4.md
@@ -166,11 +166,11 @@ impl PageTable {
 为了让内核能访问实际的物理地址， rCore 设计了三种粒度的访问方式： 基于 PTE， 基于 Bytes， 基于变量类型。 至此， 物理地址空间的分配以及访问的框架已经建成， 后续需要做的就是构建虚拟地址与物理地址映射的 页表(Page Table)。
 ```rust
 // os/src/mm/address.rs
-  
+
 impl PhysPageNum {
-    pub fn get_pte_array(&self) -> &'static mut [PageTableEntry];
-    pub fn get_bytes_array(&self) -> &'static mut [u8];
-    pub fn get_mut<T>(&self) -> &'static mut T;
+    pub fn get_pte_array(&self) -> &'static mut [PageTableEntry];
+    pub fn get_bytes_array(&self) -> &'static mut [u8];
+    pub fn get_mut<T>(&self) -> &'static mut T;
 }
 ```
 ## 改进SYSCALL
@@ -198,7 +198,7 @@ pub fn sys_get_time(ts: *mut TimeVal, _tz: usize) -> isize {
     0
 }
 
-current_user_token()的定义如下：
+//current_user_token()的定义如下：
 /// Get the current 'Running' task's token.
 //pub fn current_user_token() -> usize {
 //    TASK_MANAGER.get_current_token()
