--- a/_posts/2024-01-13-rCore_ch4.md
+++ b/_posts/2024-01-13-rCore_ch4.md
@@ -11,6 +11,7 @@ tags:
 # 第四章 地址空间
 ## SV39多级页表
 在本章中使用了SV39多级页表，多级页表机制类似字典树(Trie)的实现，大大减小了页表的内存占用。  
+![rCore-ch4-0](/images/rCore/ch4-0.png)
 rCore 和 xv6 都使用了 SV39 模式， 这意味着 64-bit 的 VA (Virtual Address) 仅有低端的 39 bits 是被使用的。 而这 39 位又被划分为两部分， 被称为 VPN (Virtual Page Number) 的高 27 位用于索引 PTE (Page Table Entry)， PTE 是存放在每个应用的 Page Table 中， 由 44 位的 PPN (Physical Page Number) 与 10 位标志位组成， 这 PTE 实际构成了虚拟地址与物理地址的索引关系。 另外低 12 位是表示页内的偏移量， 这是因为我们使用 分页内存管理， 最小的内存单位是 页， 这低 12 位最终会与 PPN 组合成为实际的 56 位物理地址。
 
     需要明确的是 2^12=4096， 因而虚拟地址的低 12 位才被称作是页内的偏移量， 因为 12 位正好构成了一个页的大小。
@@ -181,6 +182,7 @@ impl PhysPageNum {
 
 引入虚存机制后，原来内核的 sys_get_time 和 sys_task_info 函数实现就无效了。请你重写这个函数，恢复其正常功能。  
 
+### sys_get_time:
 ```rust
 // os/src/syscall/process.rs
 
@@ -225,25 +227,96 @@ pub fn translated_mut_ptr<T>(token: usize, ptr: *mut T) -> &'static mut T{
     let ptr_pa = virt_to_pyhs(token, ptr_va);
     ptr_pa.get_mut()  //rCore的三种粒度访问物理页帧的方式之三:基于变量类型
 }
+```  
+
+### sys_task_info:  
+
+这里时间会涉及到精度的问题（我也想知道为什么），在ch3中直接使用`get_time_ms()`与`tcb`中的`start_time`相减即可，但是在ch4中`get_time_ms()`的精度不够，需要从`get_time_us()`获得的微秒时间进行转换。同时需要把`tcb`中的`ms`时间转换为`us`。    
+关于`get_current_task()`的实现参考ch3，但是需要进行修改，原因是在ch3中，`TaskManagerInner`的数据结构为普通的数组，而在ch4中被更新为`Vec`，其中包含不支持`clone`的成员，在多次尝试后一直无法绕过，所以进行如此修改。  
+关于查页表操作可参考`sys_get_time()`中的说明。
+```rust
+//区别在这里
+/// Inner of Task Manager
+ch3:
+pub struct TaskManagerInner {
+    /// task list
+    tasks: [TaskControlBlock; MAX_APP_NUM],
+    /// id of current `Running` task
+    current_task: usize,
+}
+ch4:
+struct TaskManagerInner {
+    /// task list
+    tasks: Vec<TaskControlBlock>,
+    /// id of current `Running` task
+    current_task: usize,
+}
+```
+```rust
+//os/src/task/mod.rs
+    ///当前任务的TCB
+    fn get_current_task(&self)-> (TaskStatus, [u32; MAX_SYSCALL_NUM],usize){
+        let inner=self.inner.exclusive_access();
+        let current=inner.current_task;
+        let tcb=&inner.tasks[current];
+        let time=get_time_ms();
+        let mut syscall_times_clone:[u32;MAX_SYSCALL_NUM]=[0;MAX_SYSCALL_NUM];
+        for i in 0..tcb.syscall_times.len(){
+            syscall_times_clone[i]=tcb.syscall_times[i];
+        }
+        (
+            TaskStatus::Running,
+            syscall_times_clone,
+            time-tcb.start_time,
+        )
+    }
+    ///增加系统调用次数
+    fn inc_syscall_times(&self,syscall_id:usize){
+        let mut inner=self.inner.exclusive_access();
+        let current=inner.current_task;
+        inner.tasks[current].syscall_times[syscall_id]+=1;
+    }
+```
+```rust
+//os/src/syscall/process.rs
+
+/// YOUR JOB: Finish sys_task_info to pass testcases
+/// HINT: You might reimplement it with virtual memory management.
+/// HINT: What if [`TaskInfo`] is splitted by two pages ?
+pub fn sys_task_info(ti: *mut TaskInfo) -> isize {
+    trace!("kernel: sys_task_info NOT IMPLEMENTED YET!");
+    let (status,syscall_times,start_time)=get_current_task();
+    let p_ti=translated_mut_ptr(current_user_token(), ti);
+    let time_now = get_time_us();
+    let time_now_ms = ((time_now / 1_000_000) & 0xffff) * 1000 + (time_now % 1_000_000 ) / 1000;
+    let time_start_ms = ((start_time / 1_000_000) & 0xffff) * 1000 + (start_time % 1_000_000 ) / 1000;
+    let time = time_now_ms - time_start_ms;
+    *p_ti=TaskInfo{
+            status,
+            syscall_times,
+            time,
+        };
+    0
+}
 ```
 <h3>2.mmap 和 munmap 匿名映射</h3>
 
 mmap 在 Linux 中主要用于在内存中映射文件， 本次实验简化它的功能，仅用于申请内存。
 
-请实现 mmap 和 munmap 系统调用，mmap 定义如下：
+请实现 `mmap` 和 `munmap` 系统调用，`mmap` 定义如下：
 ```rust
 fn sys_mmap(start: usize, len: usize, port: usize) -> isize
 ```
 * syscall ID：222
 
-* 申请长度为 len 字节的物理内存（不要求实际物理内存位置，可以随便找一块），将其映射到 start 开始的虚存，内存页属性为 port
+* 申请长度为 `len` 字节的物理内存（不要求实际物理内存位置，可以随便找一块），将其映射到 `start` 开始的虚存，内存页属性为 `port`
 
 * 参数：  
-    * start 需要映射的虚存起始地址，要求按页对齐
+    * `start` 需要映射的虚存起始地址，要求按页对齐
 
-    * len 映射字节长度，可以为 0
+    * `len` 映射字节长度，可以为 0
 
-    *  port：第 0 位表示是否可读，第 1 位表示是否可写，第 2 位表示是否可执行。其他位无效且必须为 0
+    * `port`：第 0 位表示是否可读，第 1 位表示是否可写，第 2 位表示是否可执行。其他位无效且必须为 0
 
 * 返回值：执行成功则返回 0，错误返回 -1
 
@@ -251,9 +324,9 @@ fn sys_mmap(start: usize, len: usize, port: usize) -> isize
     为了简单，目标虚存区间要求按页对齐，len 可直接按页向上取整，不考虑分配失败时的页回收。
 
 * 可能的错误：
-    * start 没有按页大小对齐  
-    * port & !0x7 != 0 (port 其余位必须为0)
-    * port & 0x7 = 0 (这样的内存无意义)
+    * `start `没有按页大小对齐  
+    * `port & !0x7 != 0` (port 其余位必须为0)
+    * `port & 0x7 = 0` (这样的内存无意义)
     * `[start, start + len)` 中存在已经被映射的页
     * 物理内存不足
 
@@ -275,6 +348,134 @@ fn sys_munmap(start: usize, len: usize) -> isize
 
 tips:
 
-* 一定要注意 mmap 是的页表项，注意 riscv 页表项的格式与 port 的区别。
+* 一定要注意 `mmap` 是对页表项，注意 `riscv` 页表项的格式与 `port` 的区别。
 
 * 你增加 PTE_U 了吗？
+
+### mmap:
+用于申请内存从虚拟内存映射到物理内存。输入参数`start`为需要映射的虚存起始地址，`len`为虚拟内存长度。首先使用`.floor()`和`.ceil()`方法找到虚拟内存对应的虚拟页的起始和结束地址，然后对其中的所有虚拟页进行遍历，如果其中的虚拟页无效，则返回-1。  
+然后用`from_bits()`方法把输入的`por`t转化为`MapPermission`，注意添加`PTE_U`。  
+最后调用`insert_framed_area()`向物理内存中添加页框。
+添加完毕后对成功性进行检查。  
+```rust
+//os/src/syscall/process.rs
+
+// YOUR JOB: Implement mmap.
+pub fn sys_mmap(start: usize, len: usize, port: usize) -> isize {
+    trace!("kernel: sys_mmap NOT IMPLEMENTED YET!");
+    //对合法性进行检查
+    if start %  PAGE_SIZE != 0 || port & !0x7 != 0 || port & 0x7 == 0{
+        return -1;
+    }
+    mmap(start,len,port)
+}
+
+//os/src/task/mod.rs
+...
+///申请内存
+    fn mmap(&self,start: usize, len: usize, port: usize)->isize{
+        let mut inner=self.inner.exclusive_access();
+        let current=inner.current_task;
+        let tcb=&mut inner.tasks[current];
+        let start_va=mm::VirtAddr::from(start);
+        let end_va=mm::VirtAddr::from(start+len);
+        //遍历了虚拟地址范围内的所有虚拟页
+        for vpn in mm::VPNRange::new(start_va.floor(),end_va.ceil()){
+            if let Some(pte) =  tcb.memory_set.translate(vpn){
+                if pte.is_valid(){
+                    return -1;
+                }
+            }
+        }
+        let map_permission: mm::MapPermission = MapPermission::from_bits((port as u8) << 1).unwrap() | MapPermission::U;
+        tcb.memory_set.insert_framed_area(start_va, end_va, map_permission);
+        //检查从起始地址到结束地址中是否有未被映射的内存
+        for vpn in mm::VPNRange::new(start_va.floor(),end_va.ceil()){
+            match tcb.memory_set.translate(vpn) {
+                Some(pte)=>{
+                    if pte.is_valid()==false{
+                        return -1;
+                    }
+                }
+                None => {
+                    return -1;
+                }
+            }
+        }
+        0
+    }
+```
+
+### munmap
+用于删除从物理内存中删除一段虚拟地址的映射。  
+主要是一个delete_frame_area()方法，和insert_frame_area()是一个对应关系，但是插入方法原来的代码中已经给出，删除代码需要仿照其去实现。
+```rust
+//os/src/mm/memory_set.rs
+
+    /// Assume that no conflicts.
+    ///新增页框  原环境自带
+    pub fn insert_framed_area(
+        &mut self,
+        start_va: VirtAddr,
+        end_va: VirtAddr,
+        permission: MapPermission,
+    ) {
+        self.push(
+            MapArea::new(start_va, end_va, MapType::Framed, permission),
+            None,
+        );
+    }
+    /// ch4:删除页框
+    pub fn delete_frame_area(
+        &mut self,
+        start_va: VirtAddr,
+        end_va: VirtAddr,
+    ){
+        let start_vpn = start_va.floor();
+        let end_vpn = end_va.ceil();  //虚拟地址转为虚拟页号
+        let map_area = self.areas.iter_mut().filter(|a| {
+            a.vpn_range.get_start() == start_vpn && 
+            a.vpn_range.get_end() == end_vpn
+        }).next().unwrap(); //使用迭代器和过滤器，遍历 self 中的区域集合，找到与指定虚拟地址范围匹配的区域
+
+        map_area.unmap(&mut self.page_table);
+    }
+```
+```rust
+//os/src/syscall/process.rs
+// YOUR JOB: Implement munmap.
+pub fn sys_munmap(start: usize, len: usize) -> isize {
+    trace!("kernel: sys_munmap NOT IMPLEMENTED YET!");
+    if start %  PAGE_SIZE != 0 {
+        return -1;
+    }
+    munmap(start, len)
+}
+
+//os/src/task/mod.rs
+    ///回收内存
+    fn munmap(&self,start:usize,len:usize)->isize{
+        let mut inner=self.inner.exclusive_access();
+        let current=inner.current_task;
+        let tcb=&mut inner.tasks[current];
+        let start_va=mm::VirtAddr::from(start);
+        let end_va=mm::VirtAddr::from(start+len);
+        //检查从起始地址到结束地址中是否有未被映射的内存
+        for vpn in mm::VPNRange::new(start_va.floor(),end_va.ceil()){
+            match tcb.memory_set.translate(vpn) {
+                Some(pte)=>{
+                    if pte.is_valid()==false{
+                        return -1;
+                    }
+                }
+                None => {
+                    return -1;
+                }
+            }
+        }
+        tcb.memory_set.delete_frame_area(start_va, end_va);//按照虚拟地址从物理内存中删除页框
+        0
+    }
+```
+### 运行测试：
+![rCore-ch4](/images/rCore/ch4-1.png)
