rCore-ch5-spawn

--- a/_posts/2024-01-12-rCore_ch3.md
+++ b/_posts/2024-01-12-rCore_ch3.md
@@ -2,17 +2,12 @@
 title: 'rCore-ch3'
 date: 2024/1/12
 permalink: /posts/2024/01/rCore_ch3/
-excerpt: 'rCore 多道程序与分时多应用 '
+excerpt: '第三章 多道程序与分时多应用 '
 tags:
   - rCore
   - OS
 ---
-<style>
-/* Adjust code block font size */
-.highlight {
-  font-size: 20px; /* 您可以根据需要调整字体大小 */
-}
-</style>
+
 
 # 第三章 多道程序与分时多应用
 ## 编程作业
