--- a/_posts/2024-01-13-rCore_ch4.md
+++ b/_posts/2024-01-13-rCore_ch4.md
@@ -2,7 +2,7 @@
 title: 'rCore-ch4'
 date: 2024/1/13
 permalink: /posts/2024/01/rCore_ch4/
-excerpt: 'rCore 地址空间'
+excerpt: '第四章 地址空间'
 tags:
   - rCore
   - OS
