rCore-ch5-spawn

--- a/_posts/2024-01-15-rCore_ch5.md
+++ b/_posts/2024-01-15-rCore_ch5.md
@@ -184,7 +184,7 @@ fn sys_spawn(path: *const u8) -> isize
 
 TIPS：虽然测例很简单，但提醒读者 `spawn` **不必** 像 `fork` 一样复制父进程的地址空间。
 
-> 这里直接缝合fork和exec两个函数。真就fork+exec=spawn 🤣
+这里直接缝合fork和exec两个函数。真就fork+exec=spawn 🤣  
 
 ```rust
 //os/src/task/task.rs
@@ -252,4 +252,4 @@ pub fn sys_spawn(path: *const u8) -> isize {
         -1
     }
 }  
-```rust
+```
