--- a/_posts/2024-01-15-rCore_ch5.md
+++ b/_posts/2024-01-15-rCore_ch5.md
@@ -189,7 +189,7 @@ pub struct Processor {
 `idle` 控制流的设计目的在于分离进程调度与 `Trap`， 换入/换出进程仅需要调用 `schedule` 函数， 通过 `__switch` 保存自身进程的上下文， 之后程序流会换回 `idle_task_cx_ptr` 中的内容重新回到 `run_tasks` 的 loop 循环中查找下一个待运行的进程。 这点设计和 `xv6` 如出一辙， 在 `rCore` 中则是会持续运行 `run_tasks` 用以进程的调度。
 
 >`rCore` 让 `run_tasks` 始终保持运行， 可以把这个函数想象成一个游戏机，它的作用就是不断挑选可运行的游戏卡（进程）， 然后放到 `CPU` 这个卡槽中。 一定时间后这个 `CPU` 卡槽要给别的游戏卡（进程）用了就把这个当前的卡弹出来（这里就用了 `schedule` 函数弹出）， 然后游戏机又开始选下一张能用的游戏卡（进程）了。  
-游戏卡（进程）只知道自己被插上要运行， 以及到某个点自己要弹出来， 它不知道游戏机的存在， 这样就做到了任务调度的透明。   ----from hangx-ma
+游戏卡（进程）只知道自己被插上要运行， 以及到某个点自己要弹出来， 它不知道游戏机的存在， 这样就做到了任务调度的透明。   ---from hangx-ma
 
 ## 3. 进程管理机制
 ### 3.1 初始进程创建
