--- a/_posts/2024-01-16-数位dp.md
+++ b/_posts/2024-01-16-数位dp.md
@@ -1,6 +1,7 @@
 ---
 title: '数位dp'
 date: 2024/01/16
+update: 2024/01/17
 permalink: /posts/2024/01/digit_dp
 excerpt: 'LeetCode 数位dp模板解题'
 tags:
@@ -78,7 +79,7 @@ class Solution {
         for (int i = 2, last = 9; i <= n; i++) {
             int cur = last * (10 - i + 1);
             ans += cur; 
-						last = cur;
+			last = cur;
         }
         return ans;
     }
@@ -217,3 +218,163 @@ class Solution:
             return res
         return f(0,True,False)
 ```
+
+## LeetCode.788 旋转数字  Midium
+
+[788. 旋转数字 - 力扣（LeetCode）](https://leetcode.cn/problems/rotated-digits/)
+
+我们称一个数 X 为好数, 如果它的每位数字逐个地被旋转 180 度后，我们仍可以得到一个有效的，且和 X 不同的数。要求每位数字都要被旋转。
+
+如果一个数的每位数字被旋转以后仍然还是一个数字， 则这个数是有效的。0, 1, 和 8 被旋转后仍然是它们自己；2 和 5 可以互相旋转成对方（在这种情况下，它们以不同的方向旋转，换句话说，2 和 5 互为镜像）；6 和 9 同理，除了这些以外其他的数字旋转以后都不再是有效的数字。
+
+现在我们有一个正整数 `N`, 计算从 `1` 到 `N` 中有多少个数 X 是好数？
+
+> 简单来说就是用0,1,2,5,6,8,9来构造数X，但是至少要包含除了0,1,8以外的一个数，否则旋转完就会和原来的一样
+> 
+
+```python
+class Solution:
+    def rotatedDigits(self, n: int) -> int:
+        digits=[0,1,2,5,6,8,9]
+         #数位dp 模板
+        s=str(n)
+        @cache
+        def f(i:int,is_limit:bool,is_else:bool)->int:
+            #is_else表示除了0,1,8外至少需要有一个其他的数
+            if i==len(s):
+                return  is_else  
+            res=0
+            up=int(s[i]) if is_limit else 9 # 如果前面填的数字都和 n 的一样，那么这一位至多填 s[i],否则就超过 n 
+            for d in digits:
+                if d>up:
+                    break
+                if d!=0 and d!=1 and d!=8:
+                    res+=f(i+1,is_limit and d==up,True)
+                else:
+                    res+=f(i+1,is_limit and d==up,is_else)
+            return res
+        return f(0,True,False)
+```
+
+## LeetCode. 面试题17.06 2出现的次数  Hard
+
+[面试题 17.06. 2出现的次数 - 力扣（LeetCode）](https://leetcode.cn/problems/number-of-2s-in-range-lcci/description/)
+
+编写一个方法，计算从 0 到 n (含 n) 中数字 2 出现的次数。
+
+> 和上面的1出现的次数完全一样，把1改成2
+> 
+
+```python
+class Solution:
+    def numberOf2sInRange(self, n: int) -> int:
+        #数位dp 模板
+        s=str(n)
+        @cache
+        def f(i:int,is_limit:bool,digit_two:int)->int:
+            if i==len(s):
+                return digit_two
+            res=0
+            up=int(s[i]) if is_limit else 9 # 如果前面填的数字都和 n 的一样，那么这一位至多填 s[i],否则就超过 n 
+            for d in range(0,up+1):
+                if d==2:
+                    res+=f(i+1,is_limit and d==up,digit_two+1)
+                else:
+                    res+=f(i+1,is_limit and d==up,digit_two)
+            return res
+        return f(0,True,0)
+```
+
+## LeetCode.**2801. 统计范围内的步进数字数目  Hard**
+
+给你两个正整数 `low` 和 `high` ，都用字符串表示，请你统计闭区间 `[low, high]` 内的 **步进数字** 数目。
+
+如果一个整数相邻数位之间差的绝对值都 **恰好** 是 `1` ，那么这个数字被称为 **步进数字** 。
+
+请你返回一个整数，表示闭区间 `[low, high]` 之间步进数字的数目。
+
+由于答案可能很大，请你将它对 `10^9 + 7` **取余** 后返回。
+
+**注意：**步进数字不能有前导 0 。
+
+> 两次记忆化搜索
+> 
+
+```python
+class Solution:
+    def countSteppingNumbers(self, low: str, high: str) -> int:
+        #两次记忆化搜索
+        def help(s:str)->int:
+            #数位dp 模板
+            @cache
+            def f(i:int,is_limit:bool,is_num:bool,pre_digit:int)->int:
+                #pre_digit:前一个数
+                if i==len(s):
+                    return int(is_num)
+                res=0
+                if not is_num: #可以继续跳过
+                    res=f(i+1,False,False,pre_digit)
+                low=0 if is_num else 1
+                up=int(s[i]) if is_limit else 9 # 如果前面填的数字都和 n 的一样，那么这一位至多填 s[i],否则就超过 n 
+                for d in range(low,up+1):
+                    if not is_num or abs(d-pre_digit)==1:
+                        res+=f(i+1,is_limit and d==up,True,d)
+                return res%1_000_000_007
+            return f(0,True,False,0)
+
+        return (help(high)-help(str(int(low) - 1)))%1_000_000_007
+```
+
+## LeetCode.2719 统计整数数目  Hard
+
+[2719. 统计整数数目 - 力扣（LeetCode）](https://leetcode.cn/problems/count-of-integers/description/)
+
+给你两个数字字符串 `num1` 和 `num2` ，以及两个整数 `max_sum` 和 `min_sum` 。如果一个整数 `x` 满足以下条件，我们称它是一个好整数：
+
+- `num1 <= x <= num2`
+- `min_sum <= digit_sum(x) <= max_sum`.
+
+请你返回好整数的数目。答案可能很大，请返回答案对 `10^9 + 7` 取余后的结果。
+
+注意，`digit_sum(x)` 表示 `x` 各位数字之和。
+
+> 同时把数位和添加到记忆化参数里即可
+> 
+
+```python
+class Solution:
+    def count(self, num1: str, num2: str, min_sum: int, max_sum: int) -> int:
+        def help(s:str)->int:
+            #数位dp 模板
+            @cache
+            def f(i:int,is_limit:bool,digit_sum:int)->int:
+                if(digit_sum>max_sum):
+                    return 0
+                #digit_sum为数位之和
+                if i==len(s):
+                    return digit_sum>=min_sum  
+                res=0
+                up=int(s[i]) if is_limit else 9 # 如果前面填的数字都和 n 的一样，那么这一位至多填 s[i],否则就超过 n 
+                for d in range(0,up+1):
+                    res+=f(i+1,is_limit and d==up,digit_sum+d)
+                return res
+            return f(0,True,0)
+        return (help(num2)-help(str(int(num1)-1)))%1_000_000_007
+```
+
+## LeetCode.1397 找到所有好字符串   Hard
+
+[1397. 找到所有好字符串 - 力扣（LeetCode）](https://leetcode.cn/problems/find-all-good-strings/description/)
+
+给你两个长度为 `n` 的字符串 `s1` 和 `s2` ，以及一个字符串 `evil` 。请你返回 **好字符串** 的数目。
+
+**好字符串** 的定义为：它的长度为 `n` ，字典序大于等于 `s1` ，字典序小于等于 `s2` ，且不包含 `evil` 为子字符串。
+
+由于答案可能很大，请你返回答案对 10^9 + 7 取余的结果。
+
+> 看题解要结合进KMP，不会做，先放着吧
+> 
+
+## 小结
+
+这一块真是掌握个模板就能秒杀一大片题，容易混淆的地方应该就是is_num，什么时候需要is_num，什么时候又不需要is_num，这个需要具体题目具体去分析，在我看来应该是和前导0有关，有的时候题目要构造的数需要满足一些条件，如果前导0不影响结果的话应该就不需要考虑，反之一定要考虑进前导0 的影响，即引入is_num参数。
