--- a/_posts/2024-01-17-rCore-ch6.md
+++ b/_posts/2024-01-17-rCore-ch6.md
@@ -475,6 +475,7 @@ pub fn sys_exec(path: *const u8, mut args: *const usize) -> isize {
 同样的，我们在内核中创建初始进程 initproc 也需要替换为基于文件系统的实现。
 ### 读写文件
 基于文件抽象接口和文件描述符表，我们可以按照无结构的字节流在处理基本的文件读写，这样可以让文件读写系统调用 sys_read/write 变得更加具有普适性，为后续支持把管道等抽象为文件打下了基础
+
 ## 编程练习
 由于从本章开始需要向上一章兼容，所以上一章实现的mmap,munmap,spawn都要能在本章继续运行。  
 mmap和munmap比较简单，直接从上一章复制过来就可以，但是spawn的实现需要进行改动。  
@@ -525,3 +526,185 @@ pub fn sys_spawn(path: *const u8) -> isize {
 }
 ```
 这是由于本章开始引入了文件系统，上一章使用的loader.rs模块不再使用，get_app_data_by_name函数也不再存在，需要使用inode对文件进行访问。
+
+### 硬链接
+硬链接要求两个不同的目录项指向同一个文件，在我们的文件系统中也就是两个不同名称目录项指向同一个磁盘块。
+
+本节要求实现三个系统调用 sys_linkat、sys_unlinkat、sys_stat 。
+
+**linkat：**
+
+* syscall ID: 37
+* 功能：创建一个文件的一个硬链接， linkat标准接口 。
+* Rust 接口： fn linkat(olddirfd: i32, oldpath: *const u8, newdirfd: i32, newpath: *const u8, flags: u32) -> i32
+
+* **参数**：
+    * olddirfd，newdirfd: 仅为了兼容性考虑，本次实验中始终为 AT_FDCWD (-100)，可以忽略。
+
+    * flags: 仅为了兼容性考虑，本次实验中始终为 0，可以忽略。
+
+    * oldpath：原有文件路径
+
+    * newpath: 新的链接文件路径。
+
+* **说明**：
+    * 为了方便，不考虑新文件路径已经存在的情况（属于未定义行为），除非链接同名文件。
+
+    * 返回值：如果出现了错误则返回 -1，否则返回 0。
+
+* **可能的错误**:  链接同名文件。
+
+**unlinkat:**
+
+* syscall ID: 35
+
+* 功能：取消一个文件路径到文件的链接, unlinkat标准接口 。
+
+* Rust 接口： fn unlinkat(dirfd: i32, path: *const u8, flags: u32) -> i32
+
+* **参数：**
+    * dirfd: 仅为了兼容性考虑，本次实验中始终为 AT_FDCWD (-100)，可以忽略。
+
+    * flags: 仅为了兼容性考虑，本次实验中始终为 0，可以忽略。
+
+    * path：文件路径。
+
+* **说明：**
+    * 为了方便，不考虑使用 unlink 彻底删除文件的情况。
+
+* 返回值：如果出现了错误则返回 -1，否则返回 0。
+
+* **可能的错误：**
+    文件不存在。
+
+```rust
+//easy-fs/src/vfs.rs
+
+    ///创建一个文件的一个硬链接
+    pub fn create_link(&self, old_name:&str,new_name:&str)->isize{
+        let mut fs=self.fs.lock();
+        self.modify_disk_inode(|root_inode| {
+            if let Some(old_inode_id)=self.find_inode_id(old_name, root_inode){
+                let file_count = (root_inode.size as usize) / DIRENT_SZ;
+                let new_size = (file_count + 1) * DIRENT_SZ;
+                // increase size
+                self.increase_size(new_size as u32, root_inode, &mut fs);
+                // write dirent
+                let dirent = DirEntry::new(new_name, old_inode_id);
+                root_inode.write_at(
+                    file_count * DIRENT_SZ,
+                    dirent.as_bytes(),
+                    &self.block_device,
+                );
+                0
+            }
+            else{
+                -1
+            }
+        })
+    }
+    ///取消一个文件路径到文件的链接
+    pub fn delete_link(&self,name:&str)->isize{
+        let mut _fs=self.fs.lock();
+        self.modify_disk_inode(|root_inode| {
+            assert!(root_inode.is_dir());
+            let file_count = (root_inode.size as usize) / DIRENT_SZ;
+            let mut dirent = DirEntry::empty();
+            for i in 0..file_count{
+                assert_eq!(
+                    root_inode.read_at(DIRENT_SZ * i, dirent.as_bytes_mut(), &self.block_device,),
+                    DIRENT_SZ,
+                );
+                if dirent.name()==name{
+                    let temp=DirEntry::empty();
+                    root_inode.write_at(DIRENT_SZ*i, temp.as_bytes(),&self.block_device);
+                    return 0;
+                }
+            }
+            -1
+        })
+    }
+
+//os/src/fs/inode.rs
+///  创建硬连接
+pub fn linkat(old_name: &str, new_name: &str) -> isize {
+    ROOT_INODE.create_link(old_name, new_name)
+}
+
+///  删除硬连接
+pub fn unlinkat(name: &str) -> isize {
+    ROOT_INODE.delete_link(name)
+}
+```
+```rust
+//os/src/syscall/fs.rs
+/// YOUR JOB: Implement linkat.
+pub fn sys_linkat(old_name: *const u8, new_name: *const u8) -> isize {
+    trace!(
+        "kernel:pid[{}] sys_linkat",
+        current_task().unwrap().pid.0
+    );
+    let token = current_user_token();
+    let old_path = translated_str(token, old_name);
+    let new_path = translated_str(token, new_name);
+    if old_path.is_empty() || old_path == new_path {
+        return -1;
+    }
+    linkat(old_path.as_str(), new_path.as_str())
+}
+
+/// YOUR JOB: Implement unlinkat.
+pub fn sys_unlinkat(name: *const u8) -> isize {
+    trace!(
+        "kernel:pid[{}] sys_unlinkat",
+        current_task().unwrap().pid.0
+    );
+    let token = current_user_token();
+    let path=translated_str(token, name);
+    if path.is_empty(){
+        return -1;
+    }
+    unlinkat(path.as_str())
+}
+```
+
+**fstat:**
+
+* syscall ID: 80
+
+* 功能：获取文件状态。
+* Rust 接口： fn fstat(fd: i32, st: *mut Stat) -> i32
+
+* 参数：
+    * fd: 文件描述符
+
+    * st: 文件状态结构体
+```rust
+#[repr(C)]
+#[derive(Debug)]
+pub struct Stat {
+    /// 文件所在磁盘驱动器号，该实验中写死为 0 即可
+    pub dev: u64,
+    /// inode 文件所在 inode 编号
+    pub ino: u64,
+    /// 文件类型
+    pub mode: StatMode,
+    /// 硬链接数量，初始为1
+    pub nlink: u32,
+    /// 无需考虑，为了兼容性设计
+    pad: [u64; 7],
+}
+
+/// StatMode 定义：
+bitflags! {
+    pub struct StatMode: u32 {
+        const NULL  = 0;
+        /// directory
+        const DIR   = 0o040000;
+        /// ordinary regular file
+        const FILE  = 0o100000;
+    }
+}
+```
+
+这个还不是很理解。 Todo
