--- a/_posts/2024-01-24-单调栈.md
+++ b/_posts/2024-01-24-单调栈.md
@@ -12,7 +12,7 @@ tags:
 
 # LeetCode2865/2866. 美丽塔 I/II
 
-[力扣（LeetCode）官网 - 全球极客挚爱的技术成长平台](https://leetcode.cn/problems/beautiful-towers-i/description/?envType=daily-question&envId=2024-01-24)
+[LeetCode.2865.美丽塔](https://leetcode.cn/problems/beautiful-towers-i/description/?envType=daily-question&envId=2024-01-24)
 
 给你一个长度为 `n` 下标从 **0** 开始的整数数组 `maxHeights` 。
 
@@ -32,7 +32,7 @@ tags:
 
 一个直观的思路是枚举每个点作为山峰的情况，从这个点向左向右都需要是一个**非递增**的序列。
 
-这样做的话时间复杂度是$O(n^2)$，可以通过 $`2865.美丽塔I`$ 
+这样做的话时间复杂度是$O(n^2)$，可以通过 $2865.美丽塔I$ 。
 
 ```cpp
 class Solution {
