--- a/_posts/2024-01-28-NJU-PA1.md
+++ b/_posts/2024-01-28-NJU-PA1.md
@@ -60,3 +60,154 @@ void isa_reg_display() {
   }
 }
 ```
+## 表达式求值 expr
+`p expr` 对表达式expr求值，目前支持 + - * /  
+首先在sdb中注册函数:
+```c
+static int cmd_p(char *args){
+  if(args==NULL){
+    Log("Usage: p EXPR");
+    return 0;
+  }
+  bool success=true;
+  int ans=expr(args,&success);
+  if(!success){
+    Log("Not Success!");
+    return 0;
+  }
+  printf("%d\n",ans);
+  return 0;
+}
+```
+然后按照讲义中的描述用eval函数递归求值。
+```c
+word_t expr(char *e, bool *success) {
+  if (!make_token(e)) {
+    *success = false;
+    return 0;
+  }
+
+  /* TODO: Insert codes to evaluate the expression. */
+  return eval(0,nr_token-1,success);
+}
+
+word_t eval(int p,int q,bool *success){
+  *success=true;
+  if (p > q) {
+    /* Bad expression */
+    *success=false;
+    return 0;
+  }
+  else if (p == q) {
+    /* Single token.
+     * For now this token should be a number.
+     * Return the value of the number.
+     */
+    if(tokens[p].type==TK_NUM){
+      return atoi(tokens[p].str);
+    }
+    *success=false;
+    return 0;
+  }
+  else if (check_parentheses(p, q) == true) {
+    /* The expression is surrounded by a matched pair of parentheses.
+     * If that is the case, just throw away the parentheses.
+     */
+    return eval(p + 1, q - 1,success);
+  }
+  else {
+    //op = the position of 主运算符 in the token expression;
+    int op=find_master_token(p,q);
+    word_t val1 = eval(p, op - 1,success);
+    word_t val2 = eval(op + 1, q,success);
+    switch (tokens[op].type) {
+      case '+': 
+        return val1 + val2;
+        break;
+      case '-': 
+        return  val1-val2;
+        break;
+      case '*': 
+        return val1 * val2;
+        break;
+      case '/': 
+        if(val2==0){
+          *success=false;
+          printf("Can't not divide Zero!\n");
+          return 0;
+        }
+        return val1/val2;
+        break;
+      default: 
+        *success=false;
+        break;
+    }
+  }
+  return 0;
+}
+```
+在这里面需要定义几个额外的函数。  
+首先是判断是否是成对的括号  
+```c
+//检查当前括号是否匹配
+bool check_brace_correct(int p,int q){
+  int brace = 0;
+  for (int i = p; i <= q; i++) {
+    if (tokens[i].type == '(') {
+      brace++;
+    } 
+    if (tokens[i].type == ')') {
+      if (brace <= 0) {
+        return false;
+      }
+      brace--;
+    }
+  }
+  return true;
+}
+bool check_parentheses(int p,int q){
+  return tokens[p].type == '(' && tokens[q].type == ')' && check_brace_correct(p + 1, q - 1);
+}
+```
+然后是查找主运算符
+```c
+//检查是否是运算符
+int check_operator(int pos){
+  return tokens[pos].type == '+' || tokens[pos].type == '-' || tokens[pos].type == '*' || tokens[pos].type == '/' || tokens[pos].type == TK_EQ ;
+          //  || tokens[pos].type == TK_NEQ || tokens[pos].type == TK_AND || tokens[pos].type == TK_DEREF;
+}
+//找到主运算符 
+//主运算符是优先级最低的，在一个表达式中最后计算
+int find_master_token(int p, int q) {
+  int ans = -1;
+  int brace = 0;   //因为括号的优先级高，所以不能在括号中查找
+  /* priority:
+   * 1: ==
+   * 2: + -
+   * 3: * /
+   */
+  int priority = 4;
+  for (int i = p; i <= q; i++) {
+    if (brace == 0 && check_operator(i)) {
+      if ((tokens[i].type == TK_EQ)& priority >= 1) {
+        priority = 1;
+        ans = i;
+      } else if ((tokens[i].type == '+' || tokens[i].type == '-') && priority >= 2) {
+        priority = 2;
+        ans = i;
+      } else if ((tokens[i].type == '*' || tokens[i].type == '/') && priority >= 3) {
+        priority = 3;
+        ans = i;
+      } 
+    } else if (tokens[i].type == '(') {
+      brace++;
+    } else if (tokens[i].type == ')') {
+      brace--;
+    }
+  }
+  if (ans == -1 || brace != 0) {
+    return -1;
+  }
+  return ans;
+}
+```
