--- a/_posts/2024-01-28-NJU-PA1.md
+++ b/_posts/2024-01-28-NJU-PA1.md
@@ -210,3 +210,35 @@ int find_master_token(int p, int q) {
   return ans;
 }
 ```
+## 新增运算
+与(&&) , 不等于(!=)，解引用(*), 16进制数(0x.... )  
+注意到解引用的符号和乘号相同，所以需要对每个*进行单独判断。  
+  //判断*号是乘法还是指针解引用
+```c
+  for (int i = 0; i < nr_token; i ++) {
+    if (tokens[i].type == '*' && (i == 0 || (tokens[i - 1].type !=TK_NUM &&tokens[i - 1].type !=TK_HEX && tokens[i-1].type!=')') ) ) {
+      tokens[i].type = TK_DEREF;
+    }
+  }
+```
+16进制数转十进制数：  
+```c
+word_t HEX_TO_DEC(char *hex){
+  word_t ans=0;
+  // 0xABCDEF
+  for(int i=2;hex[i]!='\0';i++){
+    ans=ans*16;
+    if('0'<=hex[i]&&hex[i]<='9'){
+      ans+=hex[i]-'0';
+    }
+    else if('A'<=hex[i]&&hex[i]<='F'){
+      ans+=(hex[i]-'A'+10);
+    }
+    else{
+      ans+=(hex[i]-'a'+10);
+    }
+  }
+  //printf("%d\n",ans);
+  return ans;
+}
+```
