--- a/_posts/2024-01-28-NJU-PA2.md
+++ b/_posts/2024-01-28-NJU-PA2.md
@@ -58,5 +58,8 @@ while (1) {
   INSTPAT_END();
 ```
 
-一开始做的时候是一头雾水，因为反汇编的结果是16进制格式的，一开始没有什么头绪，
+一开始做的时候是一头雾水，因为反汇编的结果是16进制格式的，一开始没有什么头绪，RISC-V汇编的操作也不是很熟悉，走了一些弯路。  
 ![PA2.1](/images/PA/PA2.1.png)
+一开始把li指令也当成一个单独的指令来编码，但是查资料后知道li实际上是addi的语法糖。  
+
+比较头疼，先到这里吧。
