--- a/_posts/2024-01-28-NJU-PA2.md
+++ b/_posts/2024-01-28-NJU-PA2.md
@@ -37,29 +37,424 @@ while (1) {
 
 于是, 计算机不断地重复上述四个步骤, 不断地执行指令, 直到永远.
 
-## 运行第一个C程序
+## 运行更多的程序
 要使程序能够顺利运行起来，需要在NEMU中添加指令。通过反汇编的结果来查看缺少哪些指令，这些指令的操作码是什么，在inst.c中新增指令。  
 ```c
   INSTPAT_START();
+  INSTPAT("??????? ????? ????? ??? ????? 01101 11", lui, U, R(rd) =  imm);
   INSTPAT("??????? ????? ????? ??? ????? 00101 11", auipc, U, R(rd) = s->pc + imm);
-  INSTPAT("??????? ????? ????? 100 ????? 00000 11", lbu, I, R(rd) = Mr(src1 + imm, 1));
-  INSTPAT("??????? ????? ????? 000 ????? 01000 11", sb, S, Mw(src1 + imm, 1, src2));
-
-/*-----dummy.c所需要的几个指令---*/
-  INSTPAT("??????? ????? ????? 000 ????? 11001 11", ret, I, R(rd) = s->pc + 4; s->dnpc = (src1 + imm) & ~1); // jalr(ret)指令
   INSTPAT("??????? ????? ????? 000 ????? 00100 11", addi, I, R(rd) = src1 + imm);
-  INSTPAT("??????? ????? ????? ??? ????? 11011 11", jal, J, R(rd) = s->pc + 4; s->dnpc += imm - 4;); // jal指令
+  INSTPAT("??????? ????? ????? 010 ????? 00100 11", slti, I, R(rd) = (int32_t)src1 < (int32_t)imm);
+  INSTPAT("??????? ????? ????? 011 ????? 00100 11", sltiu, I, R(rd) = (uint32_t)src1 < (uint32_t)imm);
+  INSTPAT("??????? ????? ????? 100 ????? 00100 11", xori, I, R(rd) = src1 ^ imm);
+  INSTPAT("??????? ????? ????? 110 ????? 00100 11", ori, I, R(rd) = src1 | imm);
+  INSTPAT("??????? ????? ????? 111 ????? 00100 11", andi, I, R(rd) = src1 & imm);
+  INSTPAT("000000? ????? ????? 001 ????? 00100 11", slli, I, R(rd) = src1 << imm);
+  INSTPAT("000000? ????? ????? 101 ????? 00100 11", srli, I, R(rd) = src1 >> imm);
+  INSTPAT("010000? ????? ????? 101 ????? 00100 11", srai, I, imm = BITS(imm, 4, 0); R(rd) = (SEXT(BITS(src1, 31, 31), 1) << (32 - imm)) | (src1 >> imm)); // todo: 这个有问题
+  INSTPAT("0000000 ????? ????? 000 ????? 01100 11", add, R, R(rd) = src1 + src2);
+  INSTPAT("0100000 ????? ????? 000 ????? 01100 11", sub, R, R(rd) = src1 - src2);
+  INSTPAT("0000000 ????? ????? 001 ????? 01100 11", sll, R, R(rd) = src1 << src2);
+  INSTPAT("0000000 ????? ????? 010 ????? 01100 11", slt, R, R(rd) = (int)src1 < (int)src2);  //为什么要int
+  INSTPAT("0000000 ????? ????? 011 ????? 01100 11", sltu, R, R(rd) = (uint32_t)src1 < (uint32_t)src2);
+  INSTPAT("0000000 ????? ????? 100 ????? 01100 11", xor, R, R(rd) = src1 ^ src2);
+  INSTPAT("0000000 ????? ????? 101 ????? 01100 11", srl, R, R(rd) = src1 >> src2);
+  INSTPAT("0100000 ????? ????? 101 ????? 01100 11", sra, R, R(rd) = (SEXT(BITS(src1, 31, 31), 1) << (32 - src2)) | (src1 >> src2));
+  INSTPAT("0000000 ????? ????? 110 ????? 01100 11", or, R, R(rd) = src1 | src2);
+  INSTPAT("0000000 ????? ????? 111 ????? 01100 11", and, R, R(rd) = src1 & src2);
+
+  INSTPAT("??????? ????? ????? 000 ????? 00000 11", lb, I, R(rd) = SEXT(Mr(src1 + imm, 1), 16));
+  INSTPAT("??????? ????? ????? 001 ????? 00000 11", lh, I, R(rd) = SEXT(Mr(src1 + imm, 2), 16));
+  INSTPAT("??????? ????? ????? 010 ????? 00000 11", lw, I, R(rd) = Mr(src1 + imm, 4));
+  INSTPAT("??????? ????? ????? 100 ????? 00000 11", lbu, I, R(rd) = Mr(src1 + imm, 1));
+  INSTPAT("??????? ????? ????? 101 ????? 00000 11", lhu, I, R(rd) = Mr(src1 + imm, 2));
+  INSTPAT("??????? ????? ????? 000 ????? 01000 11", sb, S, Mw(src1 + imm, 1, src2));
+  INSTPAT("??????? ????? ????? 001 ????? 01000 11", sh, S, Mw(src1 + imm, 2, src2));
   INSTPAT("??????? ????? ????? 010 ????? 01000 11", sw, S, Mw(src1 + imm, 4, src2));
-/*----------------------------*/
+  INSTPAT("??????? ????? ????? ??? ????? 11011 11", jal, J, R(rd) = s->pc + 4; s->dnpc += imm - 4;);
+  INSTPAT("??????? ????? ????? 000 ????? 11001 11", jalr, I, R(rd) = s->pc + 4; s->dnpc = (src1 + imm) & ~1); //ret
+  INSTPAT("??????? ????? ????? 000 ????? 11000 11", beq, B, s->dnpc += src1 == src2 ? imm - 4 : 0;);
+  INSTPAT("??????? ????? ????? 001 ????? 11000 11", bne, B, s->dnpc += src1 != src2 ? imm - 4 : 0;);
+  INSTPAT("??????? ????? ????? 100 ????? 11000 11", blt, B, s->dnpc += (int)src1 < (int)src2 ? imm - 4 : 0;);
+  INSTPAT("??????? ????? ????? 101 ????? 11000 11", bge, B, s->dnpc += (int)src1 >= (int)src2 ? imm - 4 : 0;);
+  INSTPAT("??????? ????? ????? 110 ????? 11000 11", bltu, B, s->dnpc += (uint32_t)src1 < (uint32_t)src2 ? imm - 4 : 0;);
+  INSTPAT("??????? ????? ????? 111 ????? 11000 11", bgeu, B, s->dnpc += (uint32_t)src1 >= (uint32_t)src2 ? imm - 4 : 0;);
+
+  INSTPAT("0000001 ????? ????? 000 ????? 01100 11", mul, R, R(rd) = src1 * src2);
+  INSTPAT("0000001 ????? ????? 001 ????? 01100 11", mulh, R, int32_t a = src1; int32_t b = src2; int64_t tmp = (int64_t)a * (int64_t)b; R(rd) = BITS(tmp, 63, 32));
+  INSTPAT("0000001 ????? ????? 011 ????? 01100 11", mulhu, R, uint64_t tmp = (uint64_t)src1 * (uint64_t)src2; R(rd) = BITS(tmp, 63, 32));
+  INSTPAT("0000001 ????? ????? 100 ????? 01100 11", div, R, R(rd) = (int32_t)src1 / (int32_t)src2);
+  INSTPAT("0000001 ????? ????? 101 ????? 01100 11", divu,R, R(rd) = (uint32_t)src1 / (uint32_t)src2);
+  INSTPAT("0000001 ????? ????? 110 ????? 01100 11", rem, R, R(rd) = (int32_t)src1 % (int32_t)src2);  //取余数
+  INSTPAT("0000001 ????? ????? 111 ????? 01100 11", remu,R, R(rd) = src1 % src2);
 
   INSTPAT("0000000 00001 00000 000 00000 11100 11", ebreak, N, NEMUTRAP(s->pc, R(10))); // R(10) is $a0
   INSTPAT("??????? ????? ????? ??? ????? ????? ??", inv, N, INV(s->pc));
 
   INSTPAT_END();
+
 ```
 
-一开始做的时候是一头雾水，因为反汇编的结果是16进制格式的，一开始没有什么头绪，RISC-V汇编的操作也不是很熟悉，走了一些弯路。  
+一开始做的时候是一头雾水，对RISC-V汇编的操作也不是很熟悉，走了一些弯路。对于几种类型(U,S,I,B,J，R)立即数imm的计算搞的不是很明白。  
 ![PA2.1](/images/PA/PA2.1.png)
-一开始把li指令也当成一个单独的指令来编码，但是查资料后知道li实际上是addi的语法糖。  
+一开始把li指令也当成一个单独的指令来编码，但是手册上并没有，然后发现似乎addi实现的就是li的功能。  
 
-比较头疼，先到这里吧。
+到这里为止已经可以正常运行除了hello-str.c和string.c以外的测试样例。  
+
+## 通过批处理模式运行NEMU
+找了半天没找到，最后还是去搜索引擎搜了。  
+在makefile中添加一个-b参数就可以启动批处理模式了。  
+
+## 实现库函数
+在klib/src/string.c中有一些关于字符串以及内存操作的库函数需要实现。  
+```c
+//获取字符串长度
+size_t strlen(const char *s)
+{
+  // panic("Not implemented");
+  if (s == NULL)
+  {
+    printf("str is NULL!\n");
+    return 0;
+  }
+  int i = 0;
+  while (s[i] != '\0')
+  {
+    i++;
+  }
+  return i;
+}
+//拷贝字符串
+char *strcpy(char *dst, const char *src)
+{
+  // panic("Not implemented");
+  if (dst == NULL || src == NULL)
+  {
+    printf("unable to copy, exit with return value NULL\n");
+    return NULL;
+  }
+
+  size_t i = 0;
+  while (src[i] != '\0')
+  {
+    dst[i] = src[i];
+    i++;
+  }
+  dst[i] = '\0';
+  return dst;
+}
+//拷贝字符串的前n个字符
+char *strncpy(char *dst, const char *src, size_t n)
+{
+  // panic("Not implemented");
+  if (dst == NULL || src == NULL || n <= 0)
+  {
+    printf("unable to copy, exit with return value NULL\n");
+    return NULL;
+  }
+  size_t i;
+  for (i = 0; i < n && src[i] != '\0'; i++)
+    dst[i] = src[i];
+  for (; i < n; i++)
+    dst[i] = '\0';
+  return dst;
+}
+//字符串连接
+char *strcat(char *dst, const char *src)
+{
+  // panic("Not implemented");
+  if (dst == NULL || src == NULL)
+  {
+    printf("pointer dst or src is NULL, exit directly\n");
+    return NULL;
+  }
+  size_t i = 0;
+  while (dst[i] != '\0')
+    i++;
+  strcpy(dst + i, src);
+  return dst;
+}
+//字符串比较大小
+int strcmp(const char *s1, const char *s2)
+{
+  if (s1 == NULL || s2 == NULL)
+  {
+    printf("unable to compare, exit with return value NULL\n");
+    return 0;
+  }
+  size_t i = 0;
+  while (s1[i] != '\0' && s2[i] != '\0')
+  {
+    if (s1[i] > s2[i])
+      return 1;
+    if (s1[i] < s2[i])
+      return -1;
+    i++;
+  }
+  if (s1[i] != '\0' && s2[i] == '\0')
+    return 1;
+  if (s1[i] == '\0' && s2[i] != '\0')
+    return -1;
+  return 0;
+}
+//比较字符串前n个字符
+int strncmp(const char *s1, const char *s2, size_t n)
+{
+  // panic("Not implemented");
+  if (s1 == NULL || s2 == NULL || n <= 0)
+  {
+    printf("unable to compare, exit with return value 0\n");
+    return 0;
+  }
+  while (n--)
+  {
+    if (*s1 > *s2)
+      return 1;
+    if (*s1 < *s2)
+      return -1;
+    s1++;
+    s2++;
+  }
+  return 0;
+}
+//设置一片内存的值
+void *memset(void *s, int c, size_t n)
+{
+  // panic("Not implemented");
+  if (s == NULL || n <= 0)
+  {
+    printf("Unable to memset\n");
+    return s;
+  }
+  char *ch = (char *)s;
+  for (int i = 0; i < n; i++)
+  {
+    ch[i] = c;
+  }
+  return s;
+}
+//移动内存
+void *memmove(void *dst, const void *src, size_t n)
+{
+  panic("Not implemented");
+  if (dst == NULL || src == NULL || n <= 0)
+  {
+    printf("unable to move, exit with return value null\n");
+    return NULL;
+  }
+  
+}
+//复制内存
+void *memcpy(void *out, const void *in, size_t n)
+{
+  if (out == NULL || in == NULL || n <= 0)
+  {
+    printf("unable to copy, exit with return value nullptr\n");
+    return NULL;
+  }
+  char *d = (char *)out;
+  char *s = (char *)in;
+  while (n--)
+  {
+    *d = *s;
+    d++;
+    s++;
+  }
+  return out;
+}
+//内存比较
+int memcmp(const void *s1, const void *s2, size_t n)
+{
+  // panic("Not implemented");
+  if (s1 == NULL || s2 == NULL || n <= 0)
+  {
+    printf("unable to compare, exit with return value 0\n");
+    return 0;
+  }
+  char *S1 = (char *)s1;
+  char *S2 = (char *)s2;
+  while (n--)
+  {
+    if (*S1 > *S2)
+      return 1;
+    if (*S1 < *S2)
+      return -1;
+    S1++;
+    S2++;
+  }
+  return 0;
+}
+
+#endif
+```
+要运行string.c暂时还不需要memmove，所以还没去实现。  
+
+## sprintf()
+为了运行测试用例hello-str, 还需要实现库函数sprintf(). 和其它库函数相比, sprintf()比较特殊, 因为它的参数数目是可变的. 为了获得数目可变的参数, 需要使用C库stdarg.h中提供的宏。  
+做这个才发现对于几个不同类型的printf的了解不是很到位。  
+这里简单总结一下：
+* printf:  向stdout输出  
+* sprintf: 将可变个参数(...)按照format格式化成字符串，然后将其复制到str中。
+* snprintf:和sprintf的功能一样，不过增加了长度限制
+* vsprintf: param 按格式format写入字符串str中，但是有内存溢出的问题，建议使用vsnprintf
+* vsnprintf: 同vsprintf,增加了长度限制，防止内存溢出  
+
+这里都是通过调用vsnprintf来实现。  
+```c
+#include <am.h>
+#include <klib.h>
+#include <klib-macros.h>
+#include <stdarg.h>
+
+#if !defined(__ISA_NATIVE__) || defined(__NATIVE_USE_KLIB__)
+static char HEX[] = "0123456789ABCDEF";
+int printf(const char *fmt, ...)
+{
+  // panic("Not implemented");
+  char buffer[2048];
+  va_list arg;
+  va_start(arg, fmt);
+  int ret = vsprintf(buffer, fmt, arg);
+  putstr(buffer);
+  va_end(arg);
+  return ret;
+}
+
+int vsprintf(char *out, const char *fmt, va_list ap)
+{
+  // panic("Not implemented");
+  return vsnprintf(out, -1, fmt, ap);
+}
+
+int sprintf(char *out, const char *fmt, ...)
+{
+  va_list arg;
+  va_start(arg, fmt);
+  int ret = vsprintf(out, fmt, arg);
+  va_end(arg);
+  return ret;
+}
+
+int snprintf(char *out, size_t n, const char *fmt, ...)
+{
+  // panic("Not implemented");
+  va_list arg;
+  va_start(arg, fmt);
+  int ret = vsnprintf(out, n, fmt, arg);
+  va_end(arg);
+  return ret;
+}
+
+int vsnprintf(char *out, size_t n, const char *fmt, va_list ap)
+{
+  // panic("Not implemented");
+  char buffer[128];
+  char *txt, ch; // 字符串类型和字符类型
+  int num, len;
+  int state = 0, i, j;
+  for (i = 0, j = 0; fmt[i] != '\0'; i++)
+  {
+    switch (state)
+    {
+    case 0: // 正常复制
+      if (fmt[i] != '%')
+      {
+        out[j] = fmt[i];
+        j++;
+      }
+      else // 检测到%时进入类型匹配的阶段
+        state = 1;
+      break;
+    case 1: // 类型匹配
+      switch (fmt[i])
+      {
+      case 's':
+        txt = va_arg(ap, char *);
+        for (int k = 0; txt[k] != '\0'; k++)
+        {
+          out[j] = txt[k];
+          j++;
+        }
+        break;
+      case 'd':
+        num = va_arg(ap, int);
+        if (num == 0)
+        {
+          out[j] = '0';
+          j++;
+          break;
+        }
+        if (num < 0)
+        {
+          out[j] = '-';
+          j++;
+          num = -num;
+        }
+        for (len = 0; num; num /= 10, len++)
+          buffer[len] = HEX[num % 10];
+        for (int k = len - 1; k >= 0; k--)
+        {
+          out[j] = buffer[k];
+          j++;
+        }
+        break;
+      case 'c':
+        ch = (char)va_arg(ap, int);
+        out[j] = ch;
+        j++;
+        break;
+      default:
+        assert(0);
+      }
+      state = 0;
+      break;
+    }
+  }
+  out[j] = '\0';
+  return j;
+}
+
+#endif
+```
+## 指令环形缓冲区 - iringbuf
+一般来说, 我们只会关心出错现场前的trace, 在运行一些大程序的时候, 运行前期的trace大多时候没有查看甚至输出的必要. 一个很自然的想法就是, 我们能不能在客户程序出错(例如访问物理内存越界)的时候输出最近执行的若干条指令呢?
+
+要实现这个功能其实并不困难, 我们只需要维护一个很简单的数据结构 - 环形缓冲区(ring buffer)即可. 具体地, 在每执行一条指令的时候, 就把这条指令的信息写入到环形缓冲区中; 如果缓冲区满了, 就会覆盖旧的内容. 客户程序出错的时候, 就把环形缓冲区中的指令打印出来, 供调试进行参考。  
+```c
+//环形缓冲区
+#define MAX_INSTR_RING_BUFFER 20
+static char ring_buffer[MAX_INSTR_RING_BUFFER][128];
+static int ring_buffer_index = 0;
+
+
+static void trace_and_difftest(Decode *_this, vaddr_t dnpc) {
+#ifdef CONFIG_ITRACE_COND
+  if (ITRACE_COND) { log_write("%s\n", _this->logbuf); }
+#endif
+  if (g_print_step) { IFDEF(CONFIG_ITRACE, puts(_this->logbuf)); }
+  IFDEF(CONFIG_DIFFTEST, difftest_step(_this->pc, dnpc));
+  //向环形缓冲区存入指令
+  strcpy(ring_buffer[ring_buffer_index],_this->logbuf);
+  ring_buffer_index=(ring_buffer_index+1)&MAX_INSTR_RING_BUFFER;
+}
+
+
+static void ring_buffer_display() {
+    printf("----------------------------iringbuf----------------------------\n");
+    for(int i = 0; i < MAX_INSTR_RING_BUFFER; ++i) {
+        if (i == ring_buffer_index)
+            printf("  -->  %s\n", ring_buffer[i]);
+        else
+            printf("       %s\n", ring_buffer[i]);
+    }
+    printf("----------------------------iringbuf----------------------------\n");
+}
+void assert_fail_msg() {
+  isa_reg_display();
+  //打印环形缓冲区
+  ring_buffer_display();
+  statistic();
+}
+```
+测试：
+![PA2.2](/images/PA/PA2.2.png)
