--- a/_posts/2024-01-28-NJU-PA2.md
+++ b/_posts/2024-01-28-NJU-PA2.md
@@ -435,7 +435,7 @@ static void trace_and_difftest(Decode *_this, vaddr_t dnpc) {
   IFDEF(CONFIG_DIFFTEST, difftest_step(_this->pc, dnpc));
   //向环形缓冲区存入指令
   strcpy(ring_buffer[ring_buffer_index],_this->logbuf);
-  ring_buffer_index=(ring_buffer_index+1)&MAX_INSTR_RING_BUFFER;
+  ring_buffer_index=(ring_buffer_index+1)%MAX_INSTR_RING_BUFFER;
 }
 
 
