--- a/_posts/2024-01-28-NJU-PA2-TRM.md
+++ b/_posts/2024-01-28-NJU-PA2-TRM.md
@@ -1,9 +1,9 @@
 ---
-title: '南京大学计算机基础PA2'
+title: '南京大学PA2-TRM'
 date: 2024/01/31
 update: 2024/01/31
-permalink: /posts/2024/01/nju-pa-2
-excerpt: '南京大学计算机基础PA2'
+permalink: /posts/2024/01/nju-pa-2-trm
+excerpt: '南京大学计算机基础PA2-TRM'
 tags:
   - OS
 ---
@@ -416,6 +416,9 @@ int vsnprintf(char *out, size_t n, const char *fmt, va_list ap)
 
 #endif
 ```
+## 指令执行的踪迹 - itrace
+NEMU已经实现了一个简单的踪迹功能 -- itrace (instruction trace), 它可以记录客户程序执行的每一条指令. itrace的实现很简单, 代码只要记录instr_fetch()取到的每一条指令, 然后调用llvm项目提供的反汇编功能(在nemu/src/utils/disasm.cc中实现). itrace会输出指令的PC, 二进制表示以及反汇编结果. 框架代码默认已经打开了这个功能, 客户程序执行的指令都会被记录到build/nemu-log.txt中. 查看这个文件, 你就可以知道客户程序是如何运行的了.  
+
 ## 指令环形缓冲区 - iringbuf
 一般来说, 我们只会关心出错现场前的trace, 在运行一些大程序的时候, 运行前期的trace大多时候没有查看甚至输出的必要. 一个很自然的想法就是, 我们能不能在客户程序出错(例如访问物理内存越界)的时候输出最近执行的若干条指令呢?
 
@@ -458,3 +461,24 @@ void assert_fail_msg() {
 ```
 测试：
 ![PA2.2](/images/PA/PA2.2.png)
+
+## 内存访问的踪迹 - mtrace
+访问内存占程序执行很大的一部分, 如果你遇到过一些和访存相关的错误(例如物理内存越界), 你一定想知道程序访存的具体行为, 然后从其中找出不正确的访存, 从而帮助你进行bug的诊断. 事实上, 我们可以很容易地对访存的结果进行追踪, 从而记录访存的踪迹(memory trace).  
+
+在Kconfig中新增：
+```ruby
+config MTRACE
+  depends on TRACE && TARGET_NATIVE_ELF && ENGINE_INTERPRETER
+  bool "Enable memory tracer"
+  default y
+```
+然后在调用paddr_read和paddr_write的时候加上
+```c
+IFDEF(CONFIG_MTRACE, Log("address = " FMT_PADDR " len = " FMT_WORD, addr, len));
+```
+
+## 函数调用的踪迹 - ftrace
+itrace和mtrace都是从底层状态机视角来追踪程序的运行, 但如果我们想了解程序的语义行为, itrace和mtrace就无法帮助我们了, 因此我们需要一个带有程序语义行为trace工具.  
+
+TODO
+
