--- a/_posts/2024-02-03-NJU-PA2-IOE.md
+++ b/_posts/2024-02-03-NJU-PA2-IOE.md
@@ -136,3 +136,49 @@ void ioe_write(int reg, void *buf);
 ![PA2.5](/images/PA/PA2.5.png)
 现在可以正常运行了，在Log中可以看到Add mmio map的记录了。  
 ![PA2.6](/images/PA/PA2.6.png)
+## 时钟
+有了时钟, 程序才可以提供时间相关的体验, 例如游戏的帧率, 程序的快慢等.    
+abstract-machine/am/include/amdev.h中为时钟的功能定义了两个抽象寄存器:
+
+* AM_TIMER_RTC, AM实时时钟(RTC, Real Time Clock), 可读出当前的年月日时分秒. PA中暂不使用.
+* AM_TIMER_UPTIME, AM系统启动时间, 可读出系统启动后的微秒数.
+
+高32位和低32位分开读取，然后拼接起来。
+
+`uptime->us = (uint64_t) inl(RTC_ADDR) | ((uint64_t) inl(RTC_ADDR + 4)) << 32;`
+
+## 跑分
+跑一次好慢，懒得跑，有空回来跑。
+
+## 设备访问的踪迹 - dtrace
+在`map_read`和`map_write`中添加`Log`即可。 和`mtrace`一样，可以在`menuconfig`中添加开关。  
+
+## 运行红白机模拟器
+正确实现时钟后, 你就可以在NEMU上运行一个字符版本的`FCEUX`了. 修改`fceux-am/src/config.h`中的代码, 把H`AS_GUI`宏注释掉, `FCEUX`就会通过`putch()`来输出画面.  
+
+`FCEUX`需要调用`klib`中的`malloc()`和`free()`, 目前你可以实现一个简单的版本:  
+
+然后可以参考`PA1`中运行`FCEUX`的方式, 来将超级玛丽运行在你的NEMU上. 为了获得比较好的显示效果, 你需要在一个不少于60行的终端中运行. 由于此时还没有实现键盘, 你将不能对游戏进行操作, 但你还是可以观看超级玛丽自带的演示(需要在开始界面中等待约10秒).
+
+> 这个有问题啊喂，在`printf`调用的`vsnprintf`中没有实现类似 `%02x、%3d`这样的格式输出，会造成输出不正常甚至`panic`退出。  
+
+## 键盘
+键盘是最基本的输入设备. 一般键盘的工作方式如下: 当按下一个键的时候, 键盘将会发送该键的通码(make code); 当释放一个键的时候, 键盘将会发送该键的断码(break code).  
+每当用户敲下/释放按键时, 将会把相应的键盘码放入数据寄存器, CPU可以访问数据寄存器, 获得键盘码; 当无按键可获取时, 将会返回AM_KEY_NONE.  
+
+从数据寄存器获取值即可。至于后两行和mask为什么要这样操作可参照`native/ioe/input.c`。  
+```c  
+void __am_input_keybrd(AM_INPUT_KEYBRD_T *kbd)
+{
+  uint32_t k = inl(KBD_ADDR);
+  kbd->keydown = k & KEYDOWN_MASK ? true : false;
+  kbd->keycode = k & ~KEYDOWN_MASK;
+}
+```
+**犯病时刻**： 
+运行测试，在Terminal输入字符没有反应。换到native上是有反应的，于是怀疑自己哪里搞错了。到处找bug，甚至觉得可能是klib的问题。  
+一天过去，偶然打开虚拟机界面发现有个经典riscv32-nemu黑框框,在这个框中按下键盘就有正确的输出了....  
+呃讲义好像说了是要在这个框里输入才有反应...被native误导了属于是，没仔细看讲义是这样的233333  
+
+## VGA
+
